<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".p04_masterdetail.maincreatecustomersdb.NewCustomerActivity">


    <!--
        TODO: Design a layout to create a new customer with:
         * A TextView with the text "Customer Name:"
         * An EditText to input the customer name (default text: "New Patinhas")
         * A Button with the text "New Customer"
    -->
    <TextView
        android:id="@+id/textViewNewCustomerName"
        android:layout_width="138dp"
        android:layout_height="31dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="327dp"
        android:text="@string/customer_name"
        app:layout_constraintBottom_toTopOf="@+id/buttonNewCustomer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNewCustomerName"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="514dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/new_patinhas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewCustomerName"
        app:layout_constraintVertical_bias="0.378" />

    <Button
        android:id="@+id/buttonNewCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="253dp"
        android:text="@string/new_customer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextNewCustomerName"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewCustomerName" />

</androidx.constraintlayout.widget.ConstraintLayout>